--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 # Emulator config
 Host: "127.0.0.1"
 Port: 5037
-Name: "localhost:5555"
+Name: "emulator-5554"
 
 # library config
 Tesseract_path: 'E:\Tesseract-OCR\tesseract.exe'
