--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,28 @@
-[tool.poetry]
-name = "epic-7-secret-shop-refresh-bot"
+[project]
+name = "Epic7Luna"
 version = "0.1.0"
 description = ""
-authors = ["Omar2535 <omar2535@alumni.ubc.ca>"]
+authors = [{ name = "Omar2535", email = "omar2535@alumni.ubc.ca" }]
+requires-python = ">=3.13"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.10"
-mouseinfo = "^0.1.3"
-numpy = "^2.0.0"
-opencv-python = "^4.10.0.84"
-pillow = "^10.4.0"
-pure-python-adb = "^0.3.0.dev0"
-pyautogui = "^0.9.54"
-pygetwindow = "^0.0.9"
-pymsgbox = "^1.0.9"
-pyperclip = "^1.9.0"
-pyrect = "^0.2.0"
-pyscreeze = "^0.1.30"
-pytesseract = "^0.3.10"
-pytweening = "^1.2.0"
-pyyaml = "^6.0.1"
-
+dependencies = [
+    "easyocr>=1.7.2",
+    "mouseinfo>=0.1.3,<0.2",
+    "numpy>=2.2.5,<3",
+    "opencv-python>=4.10.0.84,<5",
+    "pillow>=10.4.0,<11",
+    "pure-python-adb>=0.3.0.dev0,<0.4",
+    "pyautogui>=0.9.54,<0.10",
+    "pygetwindow>=0.0.9,<0.0.10",
+    "pymsgbox>=1.0.9,<2",
+    "pyperclip>=1.9.0,<2",
+    "pyrect>=0.2.0,<0.3",
+    "pyscreeze>=0.1.30,<0.2",
+    "pytesseract>=0.3.10,<0.4",
+    "pytweening>=1.2.0,<2",
+    "pyyaml>=6.0.1,<7",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
