--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 readme = "README.md"
 dependencies = [
     "easyocr>=1.7.2",
+    "matplotlib>=3.10.1",
     "mouseinfo>=0.1.3,<0.2",
     "numpy>=2.2.5,<3",
     "opencv-python>=4.10.0.84,<5",
